Fix left / right alignment max width

--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,7 @@
 	&.is-style-side--left,
 	&.is-style-side--right {
 		padding: 0;
+		max-width: none;
 	}
 
 	&[open] {
